DEV-3172 Refactor the conversion of platinum config to per-pipeline config
See comments inline in the draft PR for more details...